--- a/css/agency.css
+++ b/css/agency.css
@@ -8,7 +8,8 @@ body {
 }
 
 .text-primary {
-  color: #fed136;
+  color: #06A5C4;
+  /* #fed136 */
 }
 
 p {
@@ -20,7 +21,7 @@ p.large {
   font-size: 16px;
 }
 
-a, 
+a,
 a:hover,
 a:focus,
 a:active,
@@ -29,14 +30,14 @@ a.active {
 }
 
 a {
-  color: #fed136;
+  color: ;
 }
 
 a:hover,
 a:focus,
 a:active,
 a.active {
-  color: #fec503;
+  color: #06A5C4;
 }
 
 h1,
@@ -83,7 +84,7 @@ section h3.section-subheading {
   font-weight: 400;
   margin-bottom: 75px;
 }
-  
+
 /* ---RESPONSIVE DESIGN --- */
 
 @media (min-width: 768px) {
@@ -102,7 +103,7 @@ section h3.section-subheading {
 }
 
 .navbar-custom .navbar-brand {
-  color: #fed136;
+  color: ;
   font-family: "Kaushan Script", "Helvetica Neue", Helvetica, Arial, cursive;
 }
 
@@ -110,7 +111,7 @@ section h3.section-subheading {
 .navbar-custom .navbar-brand:focus,
 .navbar-custom .navbar-brand:active,
 .navbar-custom .navbar-brand.active {
-  color: #fec503;
+  color: #06A5C4;
 }
 
 .navbar-custom .navbar-collapse {
@@ -118,8 +119,8 @@ section h3.section-subheading {
 }
 
 .navbar-custom .navbar-toggle {
-  background-color: #fed136;
-  border-color: #fed136;
+  background-color: ;
+  border-color: ;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   color: white;
@@ -128,7 +129,7 @@ section h3.section-subheading {
 
 .navbar-custom .navbar-toggle:hover,
 .navbar-custom .navbar-toggle:focus {
-  background-color: #fed136;
+  background-color: ;
 }
 
 .navbar-custom .nav li a {
@@ -141,20 +142,20 @@ section h3.section-subheading {
 
 .navbar-custom .nav li a:hover,
 .navbar-custom .nav li a:focus {
-  color: #fed136;
+  color: ;
   outline: none;
 }
 
 .navbar-custom .navbar-nav > .active > a {
   border-radius: 0;
   color: white;
-  background-color: #fed136;
+  background-color: ;
 }
 
 .navbar-custom .navbar-nav > .active > a:hover,
 .navbar-custom .navbar-nav > .active > a:focus {
   color: white;
-  background-color: #fec503;
+  background-color: #06A5C4;
 }
 
 /* ---RESPONSIVE DESIGN --- */
@@ -347,7 +348,7 @@ header .intro-text .intro-heading {
   height: 80px;
   position: absolute;
   z-index: 100;
-  background-color: #fed136;
+  background-color: ;
   color: white;
   border-radius: 100%;
   border: 7px solid #f1f1f1;
@@ -493,8 +494,8 @@ header .intro-text .intro-heading {
 
 .btn-primary {
   color: white;
-  background-color: #fed136;
-  border-color: #fed136;
+  background-color: ;
+  border-color: ;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
@@ -506,8 +507,8 @@ header .intro-text .intro-heading {
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
   color: white;
-  background-color: #fec503;
-  border-color: #f6bf01;
+  background-color: #06A5C4;
+  border-color: #0587A0;
 }
 
 .btn-primary:active,
@@ -531,19 +532,19 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #fed136;
-  border-color: #fed136;
+  background-color: ;
+  border-color: ;
 }
 
 .btn-primary .badge {
-  color: #fed136;
+  color: ;
   background-color: white;
 }
 
 .btn-xl {
   color: white;
-  background-color: #fed136;
-  border-color: #fed136;
+  background-color: ;
+  border-color: ;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
@@ -558,8 +559,8 @@ fieldset[disabled] .btn-primary.active {
 .btn-xl.active,
 .open .dropdown-toggle.btn-xl {
   color: white;
-  background-color: #fec503;
-  border-color: #f6bf01;
+  background-color: #06A5C4;
+  border-color: #0587A0;
 }
 
 .btn-xl:active,
@@ -583,12 +584,12 @@ fieldset[disabled] .btn-xl:active,
 .btn-xl.disabled.active,
 .btn-xl[disabled].active,
 fieldset[disabled] .btn-xl.active {
-  background-color: #fed136;
-  border-color: #fed136;
+  background-color: ;
+  border-color: ;
 }
 
 .btn-xl .badge {
-  color: #fed136;
+  color: ;
   background-color: white;
 }
 
@@ -610,7 +611,7 @@ fieldset[disabled] .btn-xl.active {
 }
 
 #portfolio .portfolio-item .portfolio-link .portfolio-hover {
-  background: rgba(254, 209, 54, 0.9);
+  background: rgba(6, 165, 196, 0.9);
   position: absolute;
   width: 100%;
   height: 100%;
@@ -799,7 +800,7 @@ section#contact .form-group textarea.form-control {
 }
 
 section#contact .form-control:focus {
-  border-color: #fed136;
+  border-color: ;
   box-shadow: none;
 }
 
@@ -862,12 +863,12 @@ footer span.copyright {
 
 ::-moz-selection {
   text-shadow: none;
-  background: #fed136;
+  background: ;
 }
 
 ::selection {
   text-shadow: none;
-  background: #fed136;
+  background: ;
 }
 
 img::selection {
@@ -879,5 +880,5 @@ img::-moz-selection {
 }
 
 body {
-  webkit-tap-highlight-color: #fed136;
+  webkit-tap-highlight-color: ;
 }
